Add support for cordova android

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --aot --prod",
+    "build:android": "ng build --aot --prod --base-href . --output-path ./mobile/www/",
+    "start:android": "cd ./mobile && cordova run android",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,6 +25,7 @@
     "@fortawesome/angular-fontawesome": "^0.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@ionic-native/android-permissions": "^5.35.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -32,6 +35,7 @@
     "bootstrap": "^4.5.3",
     "css.gg": "^2.0.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "html-escape-unescape": "^1.0.3",
     "jquery": "^3.5.1",
     "ng-gallery": "^5.0.0",
